@@ -1,3 +1,6 @@
+2545.	[doc]		ARM: Legal hostname checking (check-names) is
+			for SRV RDATA too. [RT #19304]
+
 2544.	[cleanup]	Removed unused structure members in adb.c. [RT #19225]
 
 2542.	[doc]		Update the description of dig +adflag. [RT #19290]
